@@ -1,3 +1,14 @@
+2014-01-22  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/alerts/alert_view.php: Add exception
+	of field1 in recovery fields to the new alert view
+
+	* include/functions_reporting.php
+	mobile/operation/agents.php
+	mobile/operation/tactical.php
+	mobile/include/style/main.css: Improve tactical and
+	agents view in mobile console
+
 2014-01-22  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/reporting/reporting_builder.item_editor.php,
